# CIS

./: .gitmodules  Drill_guide_sketch.sketch  final_report.md  hw1_doran.md  hw1_ravi.md
HW1/: Drill_guide_sketch.sketch  Mastoid_Screenshot.tiff  final_report.md
HW2/: Homework_2_Graphics.sketch  cis-hw-2.tex  hw2.tex
Programming 1/: CMakeLists.txt
Programming 1/Report/: report.tex
Programming 1/Report1/: report.tex
Programming 1/Submission1/cis-cal/: CMakeLists.txt
Programming 1/Submission1/cis-cal/OUTPUT/: pa1-debug-b-output-1.txt  pa1-debug-c-output-1.txt  pa1-debug-e-output-1.txt  pa1-debug-f-output-1.txt  pa1-unknown-h-output-1.txt
Programming 1/Submission1/cis-cal/include/: distortion_calibration.h  files.h
Programming 1/Submission1/cis-cal/src/: utils.cpp
Programming 1/Submission2/cis-cal/: CMakeLists.txt
Programming 1/Submission2/cis-cal/OUTPUT/: debug_error_2.txt  pa1-unknown-i-output-1.txt  pa2-debug-a-output-1.txt  pa2-debug-a-output2.txt  pa2-debug-b-output2.txt  pa2-debug-c-output-1.txt  pa2-debug-c-output1.txt  pa2-debug-c-output2.txt  pa2-debug-d-output1.txt  pa2-debug-d-output2.txt  pa2-debug-e-output1.txt  pa2-debug-e-output2.txt  pa2-debug-f-output1.txt  pa2-debug-f-output2.txt  pa2-unknown-g-output2.txt  pa2-unknown-h-output1.txt  pa2-unknown-h-output2.txt  pa2-unknown-i-output1.txt  pa2-unknown-i-output2.txt  pa2-unknown-j-output2.txt
Programming 1/Submission2/cis-cal/include/: distortion_calibration.h  horn.h  pivot_calibration.h  pointcloud.h  registration.h
Programming 1/Submission2/cis-cal/src/: main.cpp  pivot_calibration.cpp  registration.cpp
Programming 1/cis-cal/: .gitmodules  CMakeLists.txt
Programming 1/cis-cal/OUTPUT/: debug_error.txt  pa1-debug-a-output-1.txt  pa1-debug-d-output-1.txt  pa1-debug-g-output-1.txt  pa1-unknown-j-output-1.txt  pa1-unknown-k-output-1.txt  pa2-debug-a-output1.txt  pa2-debug-a-output2.txt  pa2-debug-b-output-1.txt  pa2-debug-b-output1.txt  pa2-debug-d-output-1.txt  pa2-debug-d-output2.txt  pa2-debug-e-output-1.txt  pa2-debug-e-output2.txt  pa2-debug-f-output-1.txt  pa2-unknown-g-output1.txt  pa2-unknown-g-output2.txt  pa2-unknown-h-output2.txt  pa2-unknown-j-output1.txt  pa2-unknown-j-output2.txt
Programming 1/cis-cal/doc/: Doxyfile
Programming 1/cis-cal/include/: bernstein.h  distortion_calibration.h  files.h  horn.h  main.h  pivot_calibration.h  pointcloud.h  registration.h  utils.h
Programming 1/cis-cal/src/: bernstein.cpp  distortion_calibration.cpp  files.cpp  horn.cpp  main.cpp  pivot_calibration.cpp  registration.cpp  utils.cpp
Programming 2/cis-icp/: CMakeLists.txt
Programming 2/cis-icp/OUTPUT/: PA3-A-Output.txt  PA3-B-Output.txt  PA3-C-Output.txt  PA3-D-Output.txt  PA3-E-Output.txt  PA3-F-Output.txt  PA3-G-Output.txt  PA3-H-Output.txt  PA3-J-Output.txt
Programming 2/cis-icp/OUTPUT4/: PA4-A-Output.txt  PA4-B-Output.txt  PA4-C-Output.txt  PA4-D-Output.txt  PA4-E-Output.txt  PA4-F-Output.txt  PA4-G-Output.txt  PA4-H-Output.txt  PA4-J-Output.txt  PA4-K-Output.txt
Programming 2/cis-icp/include/: files.h  horn.h  icp.h  main.h  pointcloud.h  registration.h  surface.h  utils.h
Programming 2/cis-icp/src/: files.cpp  horn.cpp  icp.cpp  main.cpp  registration.cpp  surface.cpp
