cmake_minimum_required(VERSION 3.6)
project(Programming_1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    cis-cal/include/files.h
    cis-cal/include/horn.h
    cis-cal/include/pointcloud.h
    cis-cal/include/utils.h
    cis-cal/src/main.cpp
    cis-cal/src/utils.cpp
    "PA12 - Student Data/pa1-debug-a-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-a-calbody.txt"
    "PA12 - Student Data/pa1-debug-a-calreadings.txt"
    "PA12 - Student Data/pa1-debug-a-empivot.txt"
    "PA12 - Student Data/pa1-debug-a-optpivot.txt"
    "PA12 - Student Data/pa1-debug-a-output1.txt"
    "PA12 - Student Data/pa1-debug-b-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-b-calbody.txt"
    "PA12 - Student Data/pa1-debug-b-calreadings.txt"
    "PA12 - Student Data/pa1-debug-b-empivot.txt"
    "PA12 - Student Data/pa1-debug-b-optpivot.txt"
    "PA12 - Student Data/pa1-debug-b-output1.txt"
    "PA12 - Student Data/pa1-debug-c-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-c-calbody.txt"
    "PA12 - Student Data/pa1-debug-c-calreadings.txt"
    "PA12 - Student Data/pa1-debug-c-empivot.txt"
    "PA12 - Student Data/pa1-debug-c-optpivot.txt"
    "PA12 - Student Data/pa1-debug-c-output1.txt"
    "PA12 - Student Data/pa1-debug-d-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-d-calbody.txt"
    "PA12 - Student Data/pa1-debug-d-calreadings.txt"
    "PA12 - Student Data/pa1-debug-d-empivot.txt"
    "PA12 - Student Data/pa1-debug-d-optpivot.txt"
    "PA12 - Student Data/pa1-debug-d-output1.txt"
    "PA12 - Student Data/pa1-debug-e-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-e-calbody.txt"
    "PA12 - Student Data/pa1-debug-e-calreadings.txt"
    "PA12 - Student Data/pa1-debug-e-empivot.txt"
    "PA12 - Student Data/pa1-debug-e-optpivot.txt"
    "PA12 - Student Data/pa1-debug-e-output1.txt"
    "PA12 - Student Data/pa1-debug-f-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-f-calbody.txt"
    "PA12 - Student Data/pa1-debug-f-calreadings.txt"
    "PA12 - Student Data/pa1-debug-f-empivot.txt"
    "PA12 - Student Data/pa1-debug-f-optpivot.txt"
    "PA12 - Student Data/pa1-debug-f-output1.txt"
    "PA12 - Student Data/pa1-debug-g-auxilliary1.txt"
    "PA12 - Student Data/pa1-debug-g-calbody.txt"
    "PA12 - Student Data/pa1-debug-g-calreadings.txt"
    "PA12 - Student Data/pa1-debug-g-empivot.txt"
    "PA12 - Student Data/pa1-debug-g-optpivot.txt"
    "PA12 - Student Data/pa1-debug-g-output1.txt"
    "PA12 - Student Data/pa1-unknown-h-calbody.txt"
    "PA12 - Student Data/pa1-unknown-h-calreadings.txt"
    "PA12 - Student Data/pa1-unknown-h-empivot.txt"
    "PA12 - Student Data/pa1-unknown-h-optpivot.txt"
    "PA12 - Student Data/pa1-unknown-i-calbody.txt"
    "PA12 - Student Data/pa1-unknown-i-calreadings.txt"
    "PA12 - Student Data/pa1-unknown-i-empivot.txt"
    "PA12 - Student Data/pa1-unknown-i-optpivot.txt"
    "PA12 - Student Data/pa1-unknown-j-calbody.txt"
    "PA12 - Student Data/pa1-unknown-j-calreadings.txt"
    "PA12 - Student Data/pa1-unknown-j-empivot.txt"
    "PA12 - Student Data/pa1-unknown-j-optpivot.txt"
    "PA12 - Student Data/pa1-unknown-k-calbody.txt"
    "PA12 - Student Data/pa1-unknown-k-calreadings.txt"
    "PA12 - Student Data/pa1-unknown-k-empivot.txt"
    "PA12 - Student Data/pa1-unknown-k-optpivot.txt"
    "PA12 - Student Data/pa2-debug-a-auxilliary1.txt"
    "PA12 - Student Data/pa2-debug-a-auxilliary2.txt"
    "PA12 - Student Data/pa2-debug-a-calbody.txt"
    "PA12 - Student Data/pa2-debug-a-calreadings.txt"
    "PA12 - Student Data/pa2-debug-a-ct-fiducials.txt"
    "PA12 - Student Data/pa2-debug-a-em-fiducialss.txt"
    "PA12 - Student Data/pa2-debug-a-EM-nav.txt"
    "PA12 - Student Data/pa2-debug-a-empivot.txt"
    "PA12 - Student Data/pa2-debug-a-optpivot.txt"
    "PA12 - Student Data/pa2-debug-a-output1.txt"
    "PA12 - Student Data/pa2-debug-a-output2.txt"
    "PA12 - Student Data/pa2-debug-b-auxilliary1.txt"
    "PA12 - Student Data/pa2-debug-b-auxilliary2.txt"
    "PA12 - Student Data/pa2-debug-b-calbody.txt"
    "PA12 - Student Data/pa2-debug-b-calreadings.txt"
    "PA12 - Student Data/pa2-debug-b-ct-fiducials.txt"
    "PA12 - Student Data/pa2-debug-b-em-fiducialss.txt"
    "PA12 - Student Data/pa2-debug-b-EM-nav.txt"
    "PA12 - Student Data/pa2-debug-b-empivot.txt"
    "PA12 - Student Data/pa2-debug-b-optpivot.txt"
    "PA12 - Student Data/pa2-debug-b-output1.txt"
    "PA12 - Student Data/pa2-debug-b-output2.txt"
    "PA12 - Student Data/pa2-debug-c-auxilliary1.txt"
    "PA12 - Student Data/pa2-debug-c-auxilliary2.txt"
    "PA12 - Student Data/pa2-debug-c-calbody.txt"
    "PA12 - Student Data/pa2-debug-c-calreadings.txt"
    "PA12 - Student Data/pa2-debug-c-ct-fiducials.txt"
    "PA12 - Student Data/pa2-debug-c-em-fiducialss.txt"
    "PA12 - Student Data/pa2-debug-c-EM-nav.txt"
    "PA12 - Student Data/pa2-debug-c-empivot.txt"
    "PA12 - Student Data/pa2-debug-c-optpivot.txt"
    "PA12 - Student Data/pa2-debug-c-output1.txt"
    "PA12 - Student Data/pa2-debug-c-output2.txt"
    "PA12 - Student Data/pa2-debug-d-auxilliary1.txt"
    "PA12 - Student Data/pa2-debug-d-auxilliary2.txt"
    "PA12 - Student Data/pa2-debug-d-calbody.txt"
    "PA12 - Student Data/pa2-debug-d-calreadings.txt"
    "PA12 - Student Data/pa2-debug-d-ct-fiducials.txt"
    "PA12 - Student Data/pa2-debug-d-em-fiducialss.txt"
    "PA12 - Student Data/pa2-debug-d-EM-nav.txt"
    "PA12 - Student Data/pa2-debug-d-empivot.txt"
    "PA12 - Student Data/pa2-debug-d-optpivot.txt"
    "PA12 - Student Data/pa2-debug-d-output1.txt"
    "PA12 - Student Data/pa2-debug-d-output2.txt"
    "PA12 - Student Data/pa2-debug-e-auxilliary1.txt"
    "PA12 - Student Data/pa2-debug-e-auxilliary2.txt"
    "PA12 - Student Data/pa2-debug-e-calbody.txt"
    "PA12 - Student Data/pa2-debug-e-calreadings.txt"
    "PA12 - Student Data/pa2-debug-e-ct-fiducials.txt"
    "PA12 - Student Data/pa2-debug-e-em-fiducialss.txt"
    "PA12 - Student Data/pa2-debug-e-EM-nav.txt"
    "PA12 - Student Data/pa2-debug-e-empivot.txt"
    "PA12 - Student Data/pa2-debug-e-optpivot.txt"
    "PA12 - Student Data/pa2-debug-e-output1.txt"
    "PA12 - Student Data/pa2-debug-e-output2.txt"
    "PA12 - Student Data/pa2-debug-f-auxilliary1.txt"
    "PA12 - Student Data/pa2-debug-f-auxilliary2.txt"
    "PA12 - Student Data/pa2-debug-f-calbody.txt"
    "PA12 - Student Data/pa2-debug-f-calreadings.txt"
    "PA12 - Student Data/pa2-debug-f-ct-fiducials.txt"
    "PA12 - Student Data/pa2-debug-f-em-fiducialss.txt"
    "PA12 - Student Data/pa2-debug-f-EM-nav.txt"
    "PA12 - Student Data/pa2-debug-f-empivot.txt"
    "PA12 - Student Data/pa2-debug-f-optpivot.txt"
    "PA12 - Student Data/pa2-debug-f-output1.txt"
    "PA12 - Student Data/pa2-debug-f-output2.txt"
    "PA12 - Student Data/pa2-unknown-g-calbody.txt"
    "PA12 - Student Data/pa2-unknown-g-calreadings.txt"
    "PA12 - Student Data/pa2-unknown-g-ct-fiducials.txt"
    "PA12 - Student Data/pa2-unknown-g-em-fiducialss.txt"
    "PA12 - Student Data/pa2-unknown-g-EM-nav.txt"
    "PA12 - Student Data/pa2-unknown-g-empivot.txt"
    "PA12 - Student Data/pa2-unknown-g-optpivot.txt"
    "PA12 - Student Data/pa2-unknown-h-calbody.txt"
    "PA12 - Student Data/pa2-unknown-h-calreadings.txt"
    "PA12 - Student Data/pa2-unknown-h-ct-fiducials.txt"
    "PA12 - Student Data/pa2-unknown-h-em-fiducialss.txt"
    "PA12 - Student Data/pa2-unknown-h-EM-nav.txt"
    "PA12 - Student Data/pa2-unknown-h-empivot.txt"
    "PA12 - Student Data/pa2-unknown-h-optpivot.txt"
    "PA12 - Student Data/pa2-unknown-i-calbody.txt"
    "PA12 - Student Data/pa2-unknown-i-calreadings.txt"
    "PA12 - Student Data/pa2-unknown-i-ct-fiducials.txt"
    "PA12 - Student Data/pa2-unknown-i-em-fiducialss.txt"
    "PA12 - Student Data/pa2-unknown-i-EM-nav.txt"
    "PA12 - Student Data/pa2-unknown-i-empivot.txt"
    "PA12 - Student Data/pa2-unknown-i-optpivot.txt"
    "PA12 - Student Data/pa2-unknown-j-calbody.txt"
    "PA12 - Student Data/pa2-unknown-j-calreadings.txt"
    "PA12 - Student Data/pa2-unknown-j-ct-fiducials.txt"
    "PA12 - Student Data/pa2-unknown-j-em-fiducialss.txt"
    "PA12 - Student Data/pa2-unknown-j-EM-nav.txt"
    "PA12 - Student Data/pa2-unknown-j-empivot.txt"
    "PA12 - Student Data/pa2-unknown-j-optpivot.txt"
    "PA12 - Student Data/pa2-unknown-j-output1.txt"
    "PA12 - Student Data/pa2-unknown-j-output2.txt")

add_executable(Programming_1 ${SOURCE_FILES})